--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/fontawesome_all.css" />
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -49,12 +50,146 @@
 
     <!-- Software Start-->
     <section id="software">
+      <div class="section_title">
+        <h2>Softwares</h2>
+      </div>
       <div class="inner_software">
         <div class="inner_software_child">
-          
+          <div class="icon">
+            <i class="fas fa-laptop"></i>
+          </div>
+          <h3>HTML & CSS</h3>
+          <p>
+            We have created some responsive CSS website templates for you to
+            use. Html & Css Website created with Dynamic Content
+          </p>
+        </div>
+        <div class="inner_software_child">
+          <div class="icon">
+            <i class="fa-brands fa-react"></i>
+          </div>
+          <h3>React</h3>
+          <p>
+            Best Responsive Website with React Native. Create your own React
+            components like Thumbnail, LikeButton, and Video.
+          </p>
+        </div>
+        <div class="inner_software_child">
+          <div class="icon">
+            <i class="fa-brands fa-js"></i>
+          </div>
+          <h3>JavaScript</h3>
+          <p>
+            JavaScript is the programming language of the Web. For more
+            Effective Website using JavaScript
+          </p>
         </div>
       </div>
     </section>
     <!-- Software End-->
+
+    <!-- Certificate Start-->
+    <section id="certificate">
+      <div class="section_title">
+        <h2>Certificates</h2>
+      </div>
+      <div class="inner_courses">
+        <div class="child_courses">
+          <div class="course_img">
+            <img src="images/js.png" alt="" />
+          </div>
+          <div class="detail">
+            <p>Neos</p>
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+            </ul>
+          </div>
+          <h3>JavaScript</h3>
+        </div>
+        <div class="child_courses">
+          <div class="course_img">
+            <img src="images/boot.png" alt="" />
+          </div>
+          <div class="detail">
+            <p>Neos</p>
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fa-solid fa-star-half-stroke"></i></li>
+            </ul>
+          </div>
+          <h3>Boostrap</h3>
+        </div>
+        <div class="child_courses">
+          <div class="course_img">
+            <img src="images/react.png" alt="" />
+          </div>
+          <div class="detail">
+            <p>Neos</p>
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+            </ul>
+          </div>
+          <h3>React JS</h3>
+        </div>
+        <div class="child_courses">
+          <div class="course_img">
+            <img src="images/python.png" alt="" />
+          </div>
+          <div class="detail">
+            <p>Neos</p>
+            <ul>
+              <li><i class="fas fa-star"></i></li>
+              <li><i class="fas fa-star"></i></li>
+
+              <li><i class="fa-solid fa-star-half-stroke"></i></li>
+            </ul>
+          </div>
+          <h3>Phyton</h3>
+        </div>
+      </div>
+    </section>
+    <!-- Certificate End -->
+
+    <!-- Achievement Start-->
+    <section class="" id="achievement">
+      <div class="section_title">
+        <h2>Achievement</h2>
+      </div>
+      <div class="inner_achievement">
+        <div class="child_achievement">
+          <img src="images/about-img.jpg" alt="" />
+        </div>
+        <div class="child_achievement2">
+          <div class="single_detail sd_1">
+            <h1>20+</h1>
+            <p>Portofolio Web</p>
+          </div>
+          <div class="single_detail sd_2">
+            <h1>30+</h1>
+            <p>Business Web</p>
+          </div>
+          <div class="single_detail sd_3">
+            <h1>20+</h1>
+            <p>E-commerce Web</p>
+          </div>
+          <div class="single_detail sd_4">
+            <h1>10+</h1>
+            <p>Desktop Software</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Achievement Start-->
   </body>
 </html>
