--- a/index.html
+++ b/index.html
@@ -190,6 +190,66 @@
         </div>
       </div>
     </section>
-    <!-- Achievement Start-->
+    <!-- Achievement End-->
+
+    <!-- About Start-->
+    <section id="about">
+      <div class="section_title">
+        <h2>How about my worked Company</h2>
+      </div>
+      <div class="inner_test">
+        <div class="child_test">
+          <div class="test_img">
+            <img src="images/reviews/1.jpg" alt="" />
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            non delectus corrupti perspiciatis suscipit illo modi vitae ducimus
+            unde tenetur!
+          </p>
+          <a href="#" class="test_highlight">Alexandra Fergusson</a>
+          <p>CEO</p>
+        </div>
+
+        <div class="child_test">
+          <div class="test_img">
+            <img src="images/reviews/2.jpg" alt="" />
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            non delectus corrupti perspiciatis suscipit illo modi vitae ducimus
+            unde tenetur!
+          </p>
+          <a href="#" class="test_highlight">Maegan Tailor</a>
+          <p>Director</p>
+        </div>
+
+        <div class="child_test">
+          <div class="test_img">
+            <img src="images/reviews/3.jpg" alt="" />
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            non delectus corrupti perspiciatis suscipit illo modi vitae ducimus
+            unde tenetur!
+          </p>
+          <a href="#" class="test_highlight">Max Schild</a>
+          <p>Director</p>
+        </div>
+        <div class="child_test">
+          <div class="test_img">
+            <img src="images/reviews/4.jpg" alt="" />
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            non delectus corrupti perspiciatis suscipit illo modi vitae ducimus
+            unde tenetur!
+          </p>
+          <a href="#" class="test_highlight">Zoe Saldana</a>
+          <p>CEO</p>
+        </div>
+      </div>
+    </section>
+    <!-- About End-->
   </body>
 </html>
