--- a/index.html
+++ b/index.html
@@ -251,5 +251,33 @@
       </div>
     </section>
     <!-- About End-->
+
+    <!-- Contact Start-->
+    <section id="contact">
+      <div class="section_title">
+        <h2>Contact with Us</h2>
+      </div>
+      <div class="inner_contact">
+        <div class="child_contacts">
+          <img src="images/contactt.png" alt="" />
+        </div>
+        <div class="child_contacts">
+          <form>
+            <input type="text" placeholder="Name" required />
+            <input type="email" placeholder="Email" required />
+            <input type="tel" placeholder="Phone Number" required />
+            <textarea
+              name="Message"
+              placeholder="Message"
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Contact End-->
   </body>
 </html>
