--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <link rel="stylesheet" href="css/fontawesome_all.css" />
 
     <link rel="stylesheet" href="css/style.css" />
+
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <nav class="navbar">
         <div class="logo">
           <h2><a href="#"> Mustafa Orhan</a></h2>
         </div>
@@ -28,6 +30,9 @@
           <li><a href="#about">About Me</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+      </nav>
+      <div id="menu_bar">
+        <i class="fas fa-bars"></i>
       </div>
     </header>
     <!-- Home Page Start-->
@@ -279,5 +284,6 @@
       </div>
     </section>
     <!-- Contact End-->
+    <script src="./js/main.js"></script> 
   </body>
 </html>
